@@ -7,7 +7,7 @@
 cumNormStat(obj, qFlag = TRUE, pFlag = FALSE, rel = 0.1, ...)
 }
 \arguments{
-\item{obj}{A MRexperiment object.}
+\item{obj}{A matrix or MRexperiment object.}
 
 \item{qFlag}{Flag to either calculate the proper percentile using
 R's step-wise quantile function or approximate function.}
